# MeetBetter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  index.html  package-lock.json  package.json  switch-audio.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: assemblyai.rs  audio.rs  calendar.rs  database.rs  deepgram.rs  groq.rs  lib.rs  main.rs  meeting_monitor.rs  mock.rs  ollama.rs  realtime.rs  screen_share.rs  settings.rs  system_audio.rs
src-tauri/test_audio/: README.md
website/: .gitignore  DEPLOYMENT_SUMMARY.md  README.md  index.html  netlify.toml  serve.sh
website/css/: styles.css
website/js/: main.js
