[package]
name = "meetbetter"
version = "0.1.0"
description = "MeetBetter - Privacy-focused real-time meeting transcription with AI summaries"
authors = ["Venkateswari"]
license = "MIT"
repository = "https://github.com/venkateswarisudalai/MeetBetter"
edition = "2021"
default-run = "meetbetter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meetbetter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mock_test"
path = "src/bin/mock_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
parking_lot = "0.12"
anyhow = "1.0"
futures-util = "0.3"
base64 = "0.21"
url = "2.5"
urlencoding = "2.1"
dirs = "5.0"
dotenvy = "0.15"  # Load .env files

# Platform-specific dependencies for screen share exclusion
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

